testutils/test/generated_ingresses/keepalive_coffee_svc.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keepalive-coffee-svc-coffee
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      keepalive_requests 50;
      keepalive_timeout 10s;
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 80
            path: /coffee
